--- a/package.json
+++ b/package.json
@@ -14,23 +14,39 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
     "browserify": "~13.1.0",
+    "css-loader": "^0.27.3",
     "envify": "~3.4.1",
+    "less-loader": "^4.0.1",
     "react": "^15.3.0",
     "reactify": "^1.1",
-    "watchify": "~3.7.0"
+    "style-loader": "^0.15.0",
+    "watchify": "~3.7.0",
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "start": "watchify -o js/bundle.js -v -d .",
+    "watch": "webpack ./js/app.js ./js/bundle.js --watch --display-error-details",
     "build": "browserify . | uglifyjs -cm > js/bundle.min.js",
     "test": "jest"
   },
   "author": "Pravendra Singh (hackpravj@gmail.com)",
   "browserify": {
-    "transform": [["babelify", { "presets": ["es2015", "react"] }]]
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ]
+    ]
   }
 }
