--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Prophetly front-end powered by React",
   "main": "js/app.js",
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
     "flux": "^2.0.0",
     "keymirror": "^0.1.1",
+    "multer": "^1.3.0",
     "rc-tabs": "^7.3.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-dropzone-component": "^1.4.1",
     "uglifyjs": "^2.4.10",
     "underscore": "^1.8.3"
   },
@@ -22,17 +26,18 @@
     "browserify": "~13.1.0",
     "css-loader": "^0.27.3",
     "envify": "~3.4.1",
-    "less-loader": "^4.0.1",
     "react": "^15.3.0",
     "reactify": "^1.1",
     "style-loader": "^0.15.0",
     "watchify": "~3.7.0",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "scripts": {
     "start": "watchify -o js/bundle.js -v -d .",
-    "start-dev": "webpack-dev-server --inline --hot --output-public-path=/js/",
+    "start-dev": "webpack-dev-server --inline --hot --output-public-path=/js/ --port 8080 & node ./js/server.js",
     "watch": "webpack --watch --display-error-details",
     "build": "browserify . | uglifyjs -cm > js/bundle.min.js",
     "test": "jest"
