--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "flux": "^2.0.0",
     "keymirror": "^0.1.1",
     "multer": "^1.3.0",
+    "primer-css": "^5.0.0",
     "rc-tabs": "^7.3.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-dropzone-component": "^1.4.1",
+    "react-flexbox-grid": "^1.0.2",
+    "react-grid-layout": "^0.14.4",
+    "react-progress-button": "^5.0.2",
     "uglifyjs": "^2.4.10",
     "underscore": "^1.8.3"
   },
