--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "flux": "^2.0.0",
     "keymirror": "^0.1.1",
     "multer": "^1.3.0",
+    "object-assign": "^4.1.1",
     "primer-css": "^5.0.0",
     "rc-tabs": "^7.3.1",
     "react": "^15.3.0",
