--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "flux": "^2.0.0",
+    "immutable": "^3.8.1",
     "keymirror": "^0.1.1",
     "multer": "^1.3.0",
     "object-assign": "^4.1.1",
