Implement dynamic routing using react-router
* Flux doesn't promote dispatching more than one actions concurrently.

  The following error, 'can not dispatch in the middle of a dispatch'
  was solved by making change to the 'onClick' handler function.
  Instead of calling the function in 'props', it uses 'Arrow Function'.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-flexbox-grid": "^1.0.2",
     "react-grid-layout": "^0.14.4",
     "react-progress-button": "^5.0.2",
+    "react-router": "^2.0.0",
     "uglifyjs": "^2.4.10",
     "underscore": "^1.8.3"
   },
