--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.17.1",
+    "csvtojson": "^1.1.4",
     "express": "^4.15.2",
     "flux": "^2.0.0",
     "immutable": "^3.8.1",
     "keymirror": "^0.1.1",
     "multer": "^1.3.0",
     "object-assign": "^4.1.1",
+    "octicons": "^5.0.1",
     "primer-css": "^5.0.0",
     "rc-tabs": "^7.3.1",
     "react": "^15.3.0",
