--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
     "flux": "^2.0.0",
     "immutable": "^3.8.1",
     "keymirror": "^0.1.1",
-    "multer": "^1.3.0",
     "object-assign": "^4.1.1",
     "octicons": "^5.0.1",
+    "plotly.js": "file:plotly.js-1.25.1.tgz",
     "primer-css": "^5.0.0",
     "rc-tabs": "^7.3.1",
     "react": "^15.3.0",
+    "react-bs-notifier": "^4.3.0",
     "react-dom": "^15.3.0",
     "react-dropdown": "^1.2.1",
     "react-flexbox-grid": "^1.0.2",
     "react-grid-layout": "^0.14.4",
+    "react-plotlyjs": "^0.4.0",
     "react-progress-button": "^5.0.2",
-    "react-router": "^2.0.0",
+    "react-router-dom": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
+    "react-virtualized": "^9.4.0",
     "uglifyjs": "^2.4.10",
     "underscore": "^1.8.3"
   },
