--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-node_modules
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-npm-debug.log
-uploads
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# todo
 TODO.md
+
+# upload directory
+/uploads
