--- a/package.json
+++ b/package.json
@@ -1,73 +1,33 @@
 {
-  "name": "prophetly-react",
-  "version": "0.0.1",
-  "description": "Prophetly front-end powered by React",
-  "main": "js/app.js",
+  "name": "prophetly-client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^0.15.3",
-    "body-parser": "^1.17.1",
-    "csvtojson": "^1.1.4",
-    "express": "^4.15.2",
-    "flux": "^2.0.0",
+    "axios": "^0.16.0",
+    "bootstrap": "^3.3.7",
+    "dropzone": "^4.3.0",
+    "flux": "^3.1.2",
     "immutable": "^3.8.1",
-    "keymirror": "^0.1.1",
-    "object-assign": "^4.1.1",
-    "octicons": "^5.0.1",
-    "plotly.js": "file:plotly.js-1.25.1.tgz",
+    "primer-core": "^2.0.0",
     "primer-css": "^5.0.0",
+    "primer-product": "^2.0.0",
     "rc-tabs": "^7.3.1",
-    "react": "^15.3.0",
+    "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-bs-notifier": "^4.3.0",
-    "react-dom": "^15.3.0",
-    "react-dropdown": "^1.2.1",
+    "react-dom": "^15.4.2",
     "react-flexbox-grid": "^1.0.2",
-    "react-grid-layout": "^0.14.4",
-    "react-plotlyjs": "^0.4.0",
-    "react-progress-button": "^5.0.2",
     "react-router-dom": "^4.0.0",
     "react-select": "^1.0.0-rc.3",
-    "react-virtualized": "^9.4.0",
-    "uglifyjs": "^2.4.10",
-    "underscore": "^1.8.3"
+    "react-virtualized": "^9.5.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babelify": "^7.3.0",
-    "browserify": "~13.1.0",
-    "css-loader": "^0.27.3",
-    "envify": "~3.4.1",
-    "react": "^15.3.0",
-    "reactify": "^1.1",
-    "style-loader": "^0.15.0",
-    "watchify": "~3.7.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-hot-middleware": "^2.17.1"
+    "react-scripts": "0.9.5"
   },
   "scripts": {
-    "start": "watchify -o js/bundle.js -v -d .",
-    "start-dev": "webpack-dev-server --inline --hot --output-public-path=/js/ --port 8080 & node ./js/server.js",
-    "watch": "webpack --watch --display-error-details",
-    "build": "browserify . | uglifyjs -cm > js/bundle.min.js",
-    "test": "jest"
-  },
-  "author": "Pravendra Singh (hackpravj@gmail.com)",
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015",
-            "react"
-          ]
-        }
-      ]
-    ]
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
